test/mutation_analysis/s0405_convert_a_number_to_hexadecimal/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0405_convert_a_number_to_hexadecimal/hafis/ablation_o3_r50/mutants/6/Solution.java:30: error: unreachable statement
        return sb.reverse().toString();
        ^
1 error
